--- a/FastReport/Relatorios.dproj
+++ b/FastReport/Relatorios.dproj
@@ -139,6 +139,11 @@
             <Form>FrmListas</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uView.Main.Detalhes.Niveis.pas">
+            <Form>FrMainDetailsNiveis</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
